[CST-10608] add pagination to SearchByIdCallable